--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <ul class="list">
-        <li id="1">1</li>
-        <li id="2">2</li>
-        <li id="3">3</li>
-        <li id="4">4</li>
-        <li id="5">5</li>
-        <li id="6">6</li>
+        <li class="li" id="1">1</li>
+        <li class="li" id="2">2</li>
+        <li class="li" id="3">3</li>
+        <li class="li" id="4">4</li>
+        <li class="li" id="5">5</li>
+        <li class="li" id="6">6</li>
+        <li class="li" id="7">7</li>
+        <li class="li" id="8">8</li>
+        <li class="li" id="9">9</li>
+        <li class="li" id="10">10</li>
+        <li class="li" id="11">11</li>
+        <li class="li" id="12">12</li>
     </ul>
     <script src="./script.js"></script>
 </body>
